--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "dinero.js": "^1.9.1",
         "dotenv": "^16.0.1",
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "luxon": "^3.0.2"
     },
     "devDependencies": {
         "@tsconfig/node16-strictest": "^1.0.3",
+        "@types/dinero.js": "^1.9.0",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.8",
+        "@types/luxon": "^3.0.0",
         "@types/node": "^18.7.13",
         "@typescript-eslint/eslint-plugin": "^5.35.1",
         "@typescript-eslint/parser": "^5.35.1",
