--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\"",
         "prepare": "husky install",
         "start": "npm run build && node build/index.js",
-        "test": "jest"
+        "test": "jest --coverage"
     },
     "keywords": [],
     "author": "",
